@@ -34,7 +34,7 @@ function DeleteTopicConfirm()
 [%# Create a form to allow the topic's properties to be changed #%]
 <form method="post" name="form" enctype="multipart/form-data" accept-charset="UTF-8" action="[% action_url %]">
 
-<input type="hidden" name="action" value="edit_topic_properties" />
+<input type="hidden" name="action" value="submit_edit_topic_properties" />
 <input type="hidden" name="topic" value="[% topicid %]" />
 <input type="hidden" name="mode" value="[% mode %]" />
 <input type="hidden" name="version" value="[% topic_version %]" />
